--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <div id="navbar">
 	<ul>
-		<li class="elem"><img [src]="cheminImage" height="30" width="100"/></li>
-		<li ><a href="#home">Collaborateurs</a></li>
+		<li class="elem"><img [src]="cheminImage" height="40" width="130"/></li>
+		<li ><a href="#home">Clients</a></li>
 		<li ><a href="#news">Projets</a></li>
-		<li ><a href="#contact">Clients</a></li>
+		<li ><a href="#contact">Collaborateurs</a></li>
 	</ul>
 </div>
