--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -1,4 +1,4 @@
- <button style="float: right; margin-top: 0px;" type="button" mdbBtn color="black" rounded="true" data-toggle="modal" data-target="#basicExample"
+ <button style="float: right; margin-top: 0px; background-color: #272727; color:#ffffff" type="button" mdbBtn rounded="true" data-toggle="modal" data-target="#basicExample"
         (click)="frame.show()" mdbWavesEffect>Ajouter un collaborateur
 </button>
 
