--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,5 +9,12 @@
 }
 
 .app-collaborateurs {
-	margin-top: 15%;
+    margin-top: 15%;
+    font-family: 'Poppins Regular';
+}
+@font-face {
+font-family: 'Poppins Regular';
+font-style: normal;
+font-weight: normal;
+src: local('Poppins Regular'), url('src/assets/poppins-cufonfonts-webfont/Poppins-Regular.woff') format('woff');
 }
