--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -11,10 +11,10 @@
       <div class="tab-container">
         <table class="table table-bordered table-responsive-md table-striped text-center">
           <tr>
-            <th class="text-center">Nom &nbsp;&nbsp;  <i *ngIf="typeSorted===false" (click)="lexicographicalSortingName()" class="fas fa-arrow-down"></i> <i *ngIf="typeSorted===true" (click)="antiLexicographicalSortingName()" class="fas fa-arrow-up"></i></th>
-            <th class="text-center">Prenom &nbsp;&nbsp;<i *ngIf="typeSortedFN===false" (click)="lexicographicalSortingFirstName()" class="fas fa-arrow-down"></i> <i *ngIf="typeSortedFN===true" (click)="antiLexicographicalSortingFirstName()" class="fas fa-arrow-up"></i></th>
-            <th class="text-center">Adresse mail</th>
-            <th class="text-center action">Actions</th>
+            <th style="background-color: #272727; color: white;" class="text-center">Nom &nbsp;&nbsp;  <i *ngIf="typeSorted===false" (click)="lexicographicalSortingName()" class="fas fa-arrow-down"></i> <i *ngIf="typeSorted===true" (click)="antiLexicographicalSortingName()" class="fas fa-arrow-up"></i></th>
+            <th style="background-color: #272727; color: white;"class="text-center">Prenom &nbsp;&nbsp;<i *ngIf="typeSortedFN===false" (click)="lexicographicalSortingFirstName()" class="fas fa-arrow-down"></i> <i *ngIf="typeSortedFN===true" (click)="antiLexicographicalSortingFirstName()" class="fas fa-arrow-up"></i></th>
+            <th style="background-color: #272727; color: white;" class="text-center">Adresse mail</th>
+            <th style="background-color: #272727; color: white;" class="text-center action">Actions</th>
           </tr>
           <ng-container *ngIf="data === ''">
             <tr  *ngFor="let person of personList; let id = index">
