--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -20,17 +20,17 @@
             <tr  *ngFor="let person of personList; let id = index">
               <td>
                 <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)" contenteditable="true">
-                  <p [ngClass]="{ 'isDelete': person.isDelete === true }" >{{person.name}}</p>
+                  <p [ngClass]="{ 'isDelete': person.deleted === true }" >{{person.name}}</p>
                 </span>
               </td>
               <td>
                 <span contenteditable="true" (keyup)="changeValue(id, 'firstname', $event)" (blur)="updateList(id, 'firstname', $event)">
-                  <p [ngClass]="{ 'isDelete': person.isDelete === true }" >{{person.firstname}}</p>
+                  <p [ngClass]="{ 'isDelete': person.deleted === true }" >{{person.firstname}}</p>
                 </span>
               </td>
               <td>
                 <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(id, 'email', $event)">
-                  <p [ngClass]="{ 'isDelete': person.isDelete === true }" >{{person.email}}</p>
+                  <p [ngClass]="{ 'isDelete': person.deleted === true }" >{{person.email}}</p>
                 </span>
               </td>  
               <td>
@@ -41,7 +41,7 @@
                   <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm" class="my-0">
                     <i class="fas fa-search"></i>
                   </button>
-                  <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm" class="my-0" (click)="remove(person.id)" *ngIf="person.isDelete === false" >
+                  <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm" class="my-0" (click)="remove(person.id)" *ngIf="person.deleted === false" >
                     <i class="fas fa-trash-alt"></i>
                   </button>
                 </span>
@@ -53,17 +53,17 @@
             <tr  *ngFor="let person of res; let id = index">
               <td>
                 <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)" contenteditable="true">
-                  <p [ngClass]="{ 'isDelete': person.isDelete === true }" >{{person.name}}</p>
+                  <p [ngClass]="{ 'isDelete': person.deleted === true }" >{{person.name}}</p>
                 </span>
               </td>
               <td>
                 <span contenteditable="true" (keyup)="changeValue(id, 'firstname', $event)" (blur)="updateList(id, 'firstname', $event)">
-                  <p [ngClass]="{ 'isDelete': person.isDelete === true }" >{{person.firstname}}</p>
+                  <p [ngClass]="{ 'isDelete': person.deleted === true }" >{{person.firstname}}</p>
                 </span>
               </td>
               <td>
                 <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(id, 'email', $event)">
-                  <p [ngClass]="{ 'isDelete': person.isDelete === true }" >{{person.email}}</p>
+                  <p [ngClass]="{ 'isDelete': person.deleted === true }" >{{person.email}}</p>
                 </span>
               </td>  
               <td>
