--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -27,6 +27,7 @@
           <ng-container *ngIf="data === ''">
             
               <tr *ngFor="let person of personList; let id = index">
+                <div>
                 <td>
                   <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)"
                     contenteditable="true">
@@ -61,6 +62,7 @@
                     </button>
                   </span>
                 </td>
+                </div>
               </tr>
           </ng-container>
 
