--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.css
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.css
@@ -1,6 +1,6 @@
 #modal-content-wrapper {
-    width: 150%;
-    height: 150%;
+    width: calc(100vh-100px);
+    height: calc(100vh-100px);
     display: grid;
     grid-template-rows: repeat(1fr, 3);
 }
@@ -26,77 +26,74 @@
 }
 
 .one {
-    margin-bottom: -40px;
-  height: 10%;
-  width: 40%;
+
+  height: 8vh;
+  width: 30vh;
   float: left;
 }
 
 .two {
-    margin-bottom: -40px;
-    height: 10%;
-     width: 40%;
+    
+    height: 8vh;
+     width: 30vh;
      align-self: right;
      float: right;
 }
 .three {
-    margin-bottom: -40px;
-    height: 10%;
-    width: 65%;
+    
+    height: 8vh;
+    width: 30vh;
     float: left;
 
 }
 .four {
-    margin-bottom: -40px;
-    height: 10%;
-    width: 20%;
+    height: 8vh;
+    width: 20vh;
     float: right;
     margin-right: 10%;
 }
 .five {
-    margin-bottom: -40px;
-    height: 10%;
-    width: 65%;
+    height: 8vh;
+    width: 60vh;
     float: left;
 }
 
 .six {
-    margin-bottom: -40px;
-    height: 10%;
-    width: 40%;
+    height: 8vh;
+    width: 30vh;
   float: left;
 }
 
 .seven {
-    margin-bottom: -40px;
-    height: 10%;
-     width: 40%;
+    height: 8vh;
+     width: 30vh;
      align-self: right;
      float: right;
 }
 
 .eight {
-    margin-bottom: -40px;
-     height: 10%;
-     width: 100%;
+
+     height: 8vh;
+     width: 50vh;
      float: left;
 }
 .nine {
-    margin-bottom: -40px;
-     height: 10%;
-     width: 90%;
+    
+     height: 8vh;
+     width: 40vh;
      float: left;
 }
 
 .ten {
-    margin-bottom: -40px;
-    height: 10%;
-     width: 90%;
+    
+    height: 16vh;
+     width: 40vh;
      float: left;
 }
 
 .eleven {
-    height: 10%;
-     width: 100%;
+    height: 8vh;
+     width: 50vh;
+     margin-left: 7vh;
      float: left;
 }
