--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -8,7 +8,9 @@
           <app-modal-add-collaborateur></app-modal-add-collaborateur>
         </div>
       </div>
-      <input type="checkbox" style="margin-top: 15px" id="form34" mdbInput mdbValidate (click)="changeShowDeleted()">
+      <input type="checkbox" id="id-name--1" name="set-name" class="switch-input" (click)="changeShowDeleted()">
+      <label for="id-name--1" class="switch-label">Affichage des collaborateurs supprimes : <span class="toggle--on">On</span><span
+          class="toggle--off">Off</span></label>
       <div class="tab-container">
         <table class="table table-bordered table-responsive-md table-striped text-center">
           <tr>
@@ -25,9 +27,9 @@
             <th style="background-color: #272727; color: white;" class="text-center action">Actions</th>
           </tr>
           <ng-container *ngIf="data === ''">
-            
-              <tr *ngFor="let person of personList; let id = index">
-                <div>
+
+            <tr *ngFor="let person of personList; let id = index">
+              <div class="test" *ngIf="(showDeleted === true) || ( showDeleted === false && person.deleted === false )">
                 <td>
                   <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)"
                     contenteditable="true">
@@ -62,43 +64,47 @@
                     </button>
                   </span>
                 </td>
-                </div>
-              </tr>
+              </div>
+            </tr>
           </ng-container>
 
           <ng-container *ngIf="data !== ''">
             <tr *ngFor="let person of res; let id = index">
-              <td>
-                <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)"
-                  contenteditable="true">
-                  <p [ngClass]="{ 'isDelete': person.deleted === true }">{{person.name}}</p>
-                </span>
-              </td>
-              <td>
-                <span contenteditable="true" (keyup)="changeValue(id, 'firstname', $event)"
-                  (blur)="updateList(id, 'firstname', $event)">
-                  <p [ngClass]="{ 'isDelete': person.deleted === true }">{{person.firstname}}</p>
-                </span>
-              </td>
-              <td>
-                <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)"
-                  (blur)="updateList(id, 'email', $event)">
-                  <p [ngClass]="{ 'isDelete': person.deleted === true }">{{person.email}}</p>
-                </span>
-              </td>
-              <td>
-                <span class="table-remove">
-                  <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm" class="my-0">
-                    <i class="fas fa-pen"></i>
-                  </button>
-                  <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm" class="my-0">
-                    <i class="fas fa-search"></i> </button>
-                  <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm" class="my-0"
-                    (click)="remove(person.id)" *ngIf="person.deleted === false">
-                    <i class="fas fa-trash-alt"></i>
-                  </button>
-                </span>
-              </td>
+              <div class="test" *ngIf="(showDeleted === true) || ( showDeleted === false && person.deleted === false )">
+                <td>
+                  <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)"
+                    contenteditable="true">
+                    <p [ngClass]="{ 'isDelete': person.deleted === true }">{{person.name}}</p>
+                  </span>
+                </td>
+                <td>
+                  <span contenteditable="true" (keyup)="changeValue(id, 'firstname', $event)"
+                    (blur)="updateList(id, 'firstname', $event)">
+                    <p [ngClass]="{ 'isDelete': person.deleted === true }">{{person.firstname}}</p>
+                  </span>
+                </td>
+                <td>
+                  <span contenteditable="true" (keyup)="changeValue(id, 'email', $event)"
+                    (blur)="updateList(id, 'email', $event)">
+                    <p [ngClass]="{ 'isDelete': person.deleted === true }">{{person.email}}</p>
+                  </span>
+                </td>
+                <td>
+                  <span class="table-remove">
+                    <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm"
+                      class="my-0">
+                      <i class="fas fa-pen"></i>
+                    </button>
+                    <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm"
+                      class="my-0">
+                      <i class="fas fa-search"></i> </button>
+                    <button type="button" mdbBtn style="background-color: #009ddf" rounded="true" size="sm" class="my-0"
+                      (click)="remove(person.id)" *ngIf="person.deleted === false">
+                      <i class="fas fa-trash-alt"></i>
+                    </button>
+                  </span>
+                </td>
+              </div>
             </tr>
           </ng-container>
         </table>
