--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -2,7 +2,7 @@
         (click)="frame.show()" mdbWavesEffect>Ajouter un collaborateur
 </button>
 
-<div mdbModal style="width: 70vh; height: 90vh; margin-left: 50vh;" #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
+<div mdbModal style="width: 70vh; height: 100vh; margin-left: 50vh;" #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
@@ -158,7 +158,7 @@
       </div>
       <div class="eleven">
       <div class="modal-footer d-flex justify-content-center">
-        <button  mdbBtn style="background-color: #272727; color: #ffffff;" class="waves-light" mdbWavesEffect (click)="onClose(); frame.hide()"><i class="fas fa-times-circle"></i>&nbsp;   Annuler
+        <button  mdbBtn style="background-color: #272727; color: #ffffff; height: 6vh; width:35vh;" class="waves-light" mdbWavesEffect (click)="onClose(); frame.hide()"><i class="fas fa-times-circle"></i>&nbsp;   Annuler
           
         </button>
         <button [ngClass]="{disabled : !(contactFormModalEmail.valid && (contactFormModalEmail.dirty || contactFormModalEmail.touched)) 
@@ -166,7 +166,7 @@
           || !(contactFormModalName.valid && (contactFormModalName.dirty || contactFormModalName.touched))
           || !(contactFormModalDate.valid && (contactFormModalDate.dirty || contactFormModalDate.touched))
           || !(contactFormModalRole.valid && (contactFormModalRole.dirty || contactFormModalRole.touched))
-          || !(contactFormModalStatut.valid && (contactFormModalStatut.dirty || contactFormModalStatut.touched))}" mdbBtn style="background-color: #009ddf; color: #ffffff;" class="waves-light" mdbWavesEffect (click)="onSubmit(); frame.hide()"><i class="fas fa-plus"></i>&nbsp;   Ajouter
+          || !(contactFormModalStatut.valid && (contactFormModalStatut.dirty || contactFormModalStatut.touched))}" mdbBtn style="background-color: #009ddf; color: #ffffff;height: 6vh; width:35vh;" class="waves-light" mdbWavesEffect (click)="onSubmit(); frame.hide()"><i class="fas fa-plus"></i>&nbsp;   Ajouter
           
         </button>
         
