--- a/src/app/collaborateurs/collaborateurs.component.html
+++ b/src/app/collaborateurs/collaborateurs.component.html
@@ -4,13 +4,15 @@
       <h2>Liste des collaborateurs</h2>
       <div class="search">
         <input [(ngModel)]="data" (ngModelChange)="change()" type="text" class="searchTerm" placeholder="recherche">
+        <div class="checkboxContainer">
+          <input type="checkbox" id="id-name--1" name="set-name" class="switch-input" (click)="changeShowDeleted()">
+          <label for="id-name--1" class="switch-label">Affichage des donnees supprimees <span
+              class="toggle--on">On</span><span class="toggle--off">Off</span></label>
+        </div>
         <div class="add-button">
           <app-modal-add-collaborateur></app-modal-add-collaborateur>
         </div>
       </div>
-      <input type="checkbox" id="id-name--1" name="set-name" class="switch-input" (click)="changeShowDeleted()">
-      <label for="id-name--1" class="switch-label">Affichage des collaborateurs supprimes : <span class="toggle--on">On</span><span
-          class="toggle--off">Off</span></label>
       <div class="tab-container">
         <table class="table table-bordered table-responsive-md table-striped text-center">
           <tr>
@@ -29,7 +31,7 @@
           <ng-container *ngIf="data === ''">
 
             <tr *ngFor="let person of personList; let id = index">
-              <div class="test" *ngIf="(showDeleted === true) || ( showDeleted === false && person.deleted === false )">
+              <div class="rowContain" *ngIf="(showDeleted === true) || ( showDeleted === false && person.deleted === false )">
                 <td>
                   <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)"
                     contenteditable="true">
@@ -70,7 +72,7 @@
 
           <ng-container *ngIf="data !== ''">
             <tr *ngFor="let person of res; let id = index">
-              <div class="test" *ngIf="(showDeleted === true) || ( showDeleted === false && person.deleted === false )">
+              <div class="rowContain" *ngIf="(showDeleted === true) || ( showDeleted === false && person.deleted === false )">
                 <td>
                   <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)"
                     contenteditable="true">
@@ -108,29 +110,6 @@
             </tr>
           </ng-container>
         </table>
-        <div class="mdc-select">
-  <div class="mdc-select__anchor demo-width-class">
-    <i class="mdc-select__dropdown-icon"></i>
-    <div class="mdc-select__selected-text"></div>
-    <span class="mdc-floating-label">Pick a Food Group</span>
-    <div class="mdc-line-ripple"></div>
-  </div>
-
-  <div class="mdc-select__menu mdc-menu mdc-menu-surface demo-width-class">
-    <ul class="mdc-list">
-      <li class="mdc-list-item mdc-list-item--selected" data-value="" aria-selected="true"></li>
-      <li class="mdc-list-item" data-value="grains">
-        Bread, Cereal, Rice, and Pasta
-      </li>
-      <li class="mdc-list-item" data-value="vegetables">
-        Vegetables
-      </li>
-      <li class="mdc-list-item" data-value="fruit">
-        Fruit
-      </li>
-    </ul>
-  </div>
-</div>
       </div>
     </div>
   </div>
