--- a/src/app/collaborateurs/navigationbar.component.css
+++ b/src/app/collaborateurs/navigationbar.component.css
@@ -12,8 +12,9 @@
   border-radius: 7px 7px 7px 7px;
   color: grey;
   padding-left:20px;
-  margin-top:7px;
-  margin-bottom:7px;
+  margin-top:1%;
+  margin-bottom:1%;
+  min-height: 40px;
 }
 
 .searchTerm:focus{
@@ -25,6 +26,7 @@
   position : relative;
   float: right;
   padding-left: 28.2%;
+  padding-right: 2%;
 }
 
 .styles_black-row__SB_cs {
