--- a/src/app/collaborateurs/switch.css
+++ b/src/app/collaborateurs/switch.css
@@ -3,17 +3,17 @@
 .switch-input {
   display: none;
 }
+
 .switch-label {
   position: relative;
   display: inline-block;
-  min-width: 112px;
   cursor: pointer;
-  font-weight: 500;
   text-align: left;
-  margin: 16px;
-  padding: 16px 0 16px 44px;
+  padding: 16px 0px 16px 44px;
 }
-.switch-label:before, .switch-label:after {
+
+.switch-label:before,
+.switch-label:after {
   content: "";
   position: absolute;
   margin: 0;
@@ -25,6 +25,7 @@
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+
 .switch-label:before {
   left: 1px;
   width: 34px;
@@ -32,6 +33,7 @@
   background-color: #9E9E9E;
   border-radius: 8px;
 }
+
 .switch-label:after {
   left: 0;
   width: 20px;
@@ -40,24 +42,38 @@
   border-radius: 50%;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084);
 }
+
 .switch-label .toggle--on {
   display: none;
 }
+
 .switch-label .toggle--off {
   display: inline-block;
 }
-.switch-input:checked + .switch-label:before {
-  background-color: #A5D6A7;
+
+.switch-input:checked+.switch-label:before {
+  background-color: #86C4DF;
 }
-.switch-input:checked + .switch-label:after {
-  background-color: #4CAF50;
+
+.switch-input:checked+.switch-label:after {
+  background-color: #009ddf;
   -ms-transform: translate(80%, -50%);
   -webkit-transform: translate(80%, -50%);
   transform: translate(80%, -50%);
 }
-.switch-input:checked + .switch-label .toggle--on {
+
+.switch-input:checked+.switch-label .toggle--on {
   display: inline-block;
 }
-.switch-input:checked + .switch-label .toggle--off {
+
+.switch-input:checked+.switch-label .toggle--off {
   display: none;
+}
+
+.checkboxContainer {
+  margin-left: 1%;
+  height: 1%;
+  width: calc(50vh);
+  margin-top: 0.5%;
+  margin-bottom: 1px;
 }
