Modifs sur la modal

--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -2,7 +2,7 @@
         (click)="frame.show()" mdbWavesEffect>Ajouter un collaborateur
 </button>
 
-<div mdbModal style="width: 70vh; height: 100vh; margin-left: 50vh;" #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
+<div mdbModal style="width: 70vh; height: 100vh;  left: 30%; right: 70%;" #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
