--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -60,7 +60,7 @@
         <div class="md-form mb-5">
           
           <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
-          <input type="checkbox" style="margin-top: 15px" id="form34"  mdbInput mdbValidate [formControl]="contactFormModalPrestataire">
+          <input type="checkbox" style="margin-top: 7%; margin-left: 35%;" id="form34"  mdbInput mdbValidate [formControl]="contactFormModalPrestataire">
           <label for="form34" style="margin-top: 20px">Prestataire</label>
           <mdb-error
             *ngIf="contactFormModalPrestataire.invalid && (contactFormModalPrestataire.dirty || contactFormModalPrestataire.touched)">
