Modifications sur les combobox

--- a/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
+++ b/src/app/modal-add-collaborateur/modal-add-collaborateur.component.html
@@ -87,13 +87,12 @@
         <div class="six">
         <div class="md-form mb-5">
           <mdb-icon fas  class="prefix grey-text"></mdb-icon>
-          <label for="form39" style="margin-bottom: 50%">Role</label>
           <select id="form39" class="form-control" mdbInput mdbValidate
-                 [formControl]="contactFormModalRole"><option value="Stagiaire">Stagiaire</option> <option value="Developpeur">Developpeur</option> <option value="Apprenti">Apprenti</option></select>
+                 [formControl]="contactFormModalRole"><option value="">-- Veuillez choisir un role --</option><option value="Stagiaire">Stagiaire</option> <option value="Developpeur">Developpeur</option> <option value="Apprenti">Apprenti</option></select>
                  
           
           <mdb-error style="margin-top: 2%"
-            *ngIf="contactFormModalRole.invalid && (contactFormModalRole.dirty || contactFormModalRole.touched)">Role obligatoire
+            *ngIf="contactFormModalRole.invalid && (contactFormModalRole.dirty || contactFormModalRole.touched) ">Role obligatoire
           </mdb-error>
           <mdb-success style="margin-top: 2%"
             *ngIf="contactFormModalRole.valid && (contactFormModalRole.dirty || contactFormModalRole.touched)">Role valide
@@ -104,9 +103,9 @@
         <div class="md-form mb-5">
           <mdb-icon fas  class="prefix grey-text"></mdb-icon>
           <select id="form38" class="form-control" mdbInput mdbValidate
-                 [formControl]="contactFormModalStatut"><option value="En fonction">En fonction</option> <option value="Desactive">Desactive</option></select>
+                 [formControl]="contactFormModalStatut"><option value="">-- Veuillez choisir un statut --</option><option value="En fonction">En fonction</option> <option value="Desactive">Desactive</option></select>
                  
-          <label for="form34">Statut</label>
+          
           <mdb-error style="margin-top: 2%"
             *ngIf="contactFormModalStatut.invalid && (contactFormModalStatut.dirty || contactFormModalStatut.touched)">Statut obligatoire
           </mdb-error>
